--- a/index.css
+++ b/index.css
@@ -2,18 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: NoyhRW01-Medium, sans-serif;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   align-content: center;
-  gap: 30px;
-  margin: 20px;
   height: 100vh;
+  overflow: hidden;
 }
 
 .logo {
@@ -22,11 +21,14 @@ body {
 }
 
 nav {
-  width: 100%;
+  width: 97%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border: 3px solid #000;
+  position: fixed;
+  top: 0;
+  margin: 20px;
 }
 
 .nav-list {
@@ -42,12 +44,20 @@ li {
 }
 
 .nav-list li {
-  border-right: 5px solid #000;
+  border-right: 3px solid #000;
   padding-right: 10px;
 }
 
 .nav-list li a {
   text-decoration: none;
+}
+
+.active {
+  color: #486b8c;
+}
+
+.nav-list li a:hover {
+  color: #486b8c;
 }
 
 .ulList {
@@ -58,18 +68,21 @@ li {
 
 #section {
   width: 50%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  overflow-y: scroll;
 }
 
 .container {
   width: 70%;
   display: flex;
   flex-direction: column;
+  gap: 40px;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  height: auto;
 }
 
 ul {
@@ -129,16 +142,20 @@ input {
 }
 
 footer {
-  width: 100%;
-  align-self: flex-start;
+  width: 97%;
+  font-size: 30px;
+  font-weight: 600;
   border: 3px solid #000;
   padding: 5px;
+  position: fixed;
+  bottom: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
-.clock {
-  position: absolute;
+.dateDisplay {
+  align-self: flex-end;
+  position: fixed;
   top: 5rem;
-  right: 3rem;
-  color: blue;
-  font-size: 30px;
+  right: 2rem;
 }
